# wasmtime-py

./: .flake8  .gitignore  CONTRIBUTING.md  Dockerfile  MANIFEST.in  Makefile  README.md  bindgen.py  docker-compose.yml  download-wasmtime.py  mypy.ini  noxfile.py  pyproject.toml  pytest.ini  setup.py
.github/actions/setup/: action.yml
.github/workflows/: main.yml
bindgen/: Cargo.toml
ci/: bindgen.py  build-rust.py  cbindgen.py  download-wasmtime.py  wasi_preview1_component_adapter.wasm  wasi_snapshot_preview1.reactor.wasm
ci/_custom_build/: backend.py
examples/: gcd.py  gcd_perf.py  hello.py  linking.py  loader.py  loader_add.wat  loader_component.py  loader_component_add.wat  loader_load_python.wat  loader_load_wasi.wat  loader_load_wasm.wat  loader_load_wasm_target.wat  loader_python_target.py  memory.py  multi.py  simd_i8x16.py
rust/: Cargo.toml  bindgen.wit  python.wit
rust/bindgen/: Cargo.toml
rust/bindgen/src/: bindgen.rs  imports.rs  lib.rs  source.rs
rust/src/: bindgen.rs  files.rs  imports.rs  lib.rs
rust/wasi_snapshot_preview1/: Cargo.toml
rust/wasi_snapshot_preview1/src/: lib.rs
tests/: test_config.py  test_engine.py  test_func.py  test_global.py  test_instance.py  test_linker.py  test_memory.py  test_module.py  test_module_linking.py  test_refs.py  test_shared_memory.py  test_store.py  test_table.py  test_tag.py  test_threads.py  test_trap.py  test_types.py  test_value.py  test_wasi.py  test_wat2wasm.py  threads.cxx  threads.wasm  types_test.py
tests/bindgen/: __init__.py  conftest.py  test_bindgen.py
tests/bindgen/bare_funcs/: app.py  component.wit  test_bare_funcs.py
tests/bindgen/export_resources/: app.py  component.wit  test_export_resources.py
tests/bindgen/list_types/: app.py  component.wit  test_lists.py
tests/codegen/: __init__.py  foo.wat  test_bare_funcs.py  test_empty.py  test_empty_import.py  test_export_resources.py  test_external_types.py  test_keywords.py  test_lists.py  test_many_arguments.py  test_records.py  test_scalars.py  test_simple_export.py  test_simple_import.py  test_two_exports.py  test_variants.py
tests/component/: test_component.py  test_func.py  test_instance.py  test_linker.py  test_types.py  test_value.py
wasmtime/: __init__.py  _bindings.py  _config.py  _engine.py  _error.py  _exportable.py  _extern.py  _ffi.py  _func.py  _globals.py  _instance.py  _instance_pre.py  _linker.py  _managed.py  _memory.py  _module.py  _sharedmemory.py  _slab.py  _store.py  _table.py  _tag.py  _trap.py  _types.py  _value.py  _wasi.py  _wat2wasm.py  bindgen.py  config.py  engine.py  extern.py  ffi.py  func.py  globals.py  instance.py  linker.py  loader.py  memory.py  module.py  store.py  table.py  (+5 more)
wasmtime/bindgen/: __init__.py  __main__.py
wasmtime/component/: __init__.py  _component.py  _enter.py  _func.py  _instance.py  _linker.py  _resource_type.py  _resources.py  _types.py
