[build-system]
requires = [
    "setuptools",
]
# Use an in-tree build backend, to customise the wheels we generate
build-backend = "backend"
backend-path = [
    "ci/_custom_build",
]

[project]
name = "wasmtime"
version = "33.0.0"
description = "A WebAssembly runtime powered by Wasmtime"
license = "Apache-2.0 WITH LLVM-exception"
readme = "README.md"
authors = [
    {name="The Wasmtime Project Developers", email="hello@bytecodealliance.org"},
]
requires-python=">=3.9"
dependencies = [
    "importlib_resources>=5.10",
]
classifiers=[
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Compilers",
    "Topic :: Software Development :: Interpreters",
]

[project.optional-dependencies]
testing = [
    "coverage",
    "pycparser",
    "pytest-mypy",
    "pytest",
    # componentize-py only support x86_64 builds on Windows
    # platform.machine() on Windows returns 'AMD64' for x86_64
    "componentize-py; platform_system != 'Windows' or platform_machine == 'AMD64'",
]

[project.urls]
"Homepacge" = "https://github.com/bytecodealliance/wasmtime-py"
"Bug Tracker" = "https://github.com/bytecodealliance/wasmtime-py/issues"
"Documentation" = "https://bytecodealliance.github.io/wasmtime-py/"
"Source Code" = "https://github.com/bytecodealliance/wasmtime-py"

[tool.setuptools]
include-package-data = true
packages = [
    "wasmtime",
    "wasmtime.bindgen",
]

[tool.setuptools.package-data]
"wasmtime" = [
    # Wasmtime shared library. Downloaded by ci/download-wasmtime.py
    "*-*/*.dll",
    "*-*/*.dylib",
    "*-*/*.so",
    "py.typed",
]
"wasmtime.bindgen" = [
    # WebAssmbly modules, python bindings. Generated by ci/build-rust.py
    "generated/*.py",
    "generated/*.wasm",
    "generated/imports/*.py",
]
