[build-system]
requires = [
    "setuptools",
    "setuptools-git-versioning>=2.0,<3",
]
# Use an in-tree build backend, to customise the wheels we generate
build-backend = "backend"
backend-path = [
    "ci/_custom_build",
]

[project]
name = "wasmtime"
dynamic = [
    "version",
]
description = "A WebAssembly runtime powered by Wasmtime"
license = "Apache-2.0 WITH LLVM-exception"
readme = "README.md"
authors = [
    {name="The Wasmtime Project Developers", email="hello@bytecodealliance.org"},
]
requires-python=">=3.9"
dependencies = [
    "importlib_resources>=5.10",
]
classifiers=[
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Compilers",
    "Topic :: Software Development :: Interpreters",
]

[project.optional-dependencies]
testing = [
    "coverage",
    "pycparser",
    "pytest-mypy",
    "pytest",
]

[project.urls]
"Homepage" = "https://github.com/bytecodealliance/wasmtime-py"
"Bug Tracker" = "https://github.com/bytecodealliance/wasmtime-py/issues"
"Documentation" = "https://bytecodealliance.github.io/wasmtime-py/"
"Source Code" = "https://github.com/bytecodealliance/wasmtime-py"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = [
    "wasmtime",
    "wasmtime.*",
]

[tool.setuptools.package-data]
# NB Coordinate changes here with .gitignore
"wasmtime" = [
    # Wasmtime shared library. Downloaded by ci/download-wasmtime.py
    "*-*/*.dll",
    "*-*/*.dylib",
    "*-*/*.so",
    "py.typed",
]

[tool.setuptools-git-versioning]
# https://setuptools-git-versioning.readthedocs.io/en/stable/options/index.html
enabled = true
version_file = "VERSION"
count_commits_from_version_file = true
# Version for distributions built from an untagged commit.
# Version "1.0.0.dev4" is a treated as a pre-release of Version "1.0.0".
# {tag}: Version under development, read from `version_file`
# {ccount}: Count of commits since `version_file` was last changed
dev_template = "{tag}.dev{ccount}"
