[package]
name = "bindgen"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
version = "0.0.0"
publish = false
edition = "2021"

[dependencies]
wit-bindgen-core = { git = 'https://github.com/bytecodealliance/wit-bindgen', features = ['component-generator'] }
heck = { version = "0.4", features = ["unicode"] }
wit-component = { git = 'https://github.com/bytecodealliance/wit-bindgen' }
indexmap = "1.0"
wasmtime-environ = { git = 'https://github.com/bytecodealliance/wasmtime', features = ['component-model'] }

# [dev-dependencies]
# test-helpers = { path = '../test-helpers' }
