[package]
name = "bindgen"
publish = false
edition = "2021"

[lib]
crate-type = ['cdylib', 'rlib']

[dependencies]
anyhow = "1.0"
heck = { version = "0.4", features = ["unicode"] }
wit-parser = "0.227.0"
wit-component = "0.227.0"
indexmap = "2.0"
wasmtime-environ = { version = "31.0.0", features = ['component-model', 'compile'] }
wit-bindgen = "0.41.0"
wit-bindgen-core = "0.41.0"


[features]
cli = []

[[bin]]
name = "bootstrap"
required-features = ["cli"]

[profile.release]
strip = 'debuginfo'
