[package]
name = "bindgen"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
version = "0.0.0"
publish = false
edition = "2021"

[lib]
crate-type = ['cdylib', 'rlib']

[dependencies]
anyhow = "1.0"
heck = { version = "0.4", features = ["unicode"] }
wit-parser = "0.14.0"
wit-component = "0.21.0"
indexmap = "2.0"
wasmtime-environ = { version = "18.0.1", features = ['component-model'] }
wit-bindgen = { workspace = true, features = ['default'] }
wit-bindgen-core = { workspace = true }

[features]
cli = []

[[bin]]
name = "bootstrap"
required-features = ["cli"]
